force-app/main/default/objects/Demo_Org__c/Demo_Org__c.object-meta.xml
<CustomObject>
    <label>Demo Org</label>
    <nameField>
        <label>Demo Org Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Orgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>