force-app/main/default/objects/Demo_Org__c/fields/Cloud__c.field-meta.xml
<CustomField>
    <fullName>Cloud__c</fullName>
    <label>Cloud</label>
    <length>255</length>
    <type>Text</type>
</CustomField>