force-app/main/default/objects/Demo_Org__c/fields/Demo_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Demo_Date_Time__c</fullName>
    <label>Demo Date Time</label>
    <type>DateTime</type>
</CustomField>