force-app/main/default/objects/Demo_Org__c/fields/Demo_Template__c.field-meta.xml
<CustomField>
    <fullName>Demo_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demo Template</label>
    <referenceTo>Demo_Template__c</referenceTo>
    <relationshipLabel>Demo Orgs</relationshipLabel>
    <relationshipName>Demo_Orgs</relationshipName>
    <type>Lookup</type>
</CustomField>