force-app/main/default/objects/Demo_Org__c/fields/Signup_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Signup_Request_Id__c</fullName>
    <externalId>true</externalId>
    <label>Signup Request Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>