force-app/main/default/objects/Demo_Org__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;In Progress&quot;</defaultValue>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>