force-app/main/default/objects/Demo_Org__c/fields/Type_of_App__c.field-meta.xml
<CustomField>
    <fullName>Type_of_App__c</fullName>
    <label>Type of App</label>
    <length>255</length>
    <type>Text</type>
</CustomField>